--- a/admin-access-tool.html
+++ b/admin-access-tool.html
@@ -183,7 +183,7 @@
 
     <script>
         // Your whitelisted IPs
-        const allowedIPs = ['100.99.48.91', '192.168.43.156', '192.168.43.1', '1.39.46.19'];
+        const allowedIPs = ['100.99.48.91', '192.168.43.156', '192.168.43.1', '1.39.46.19', '1.39.38.12'];
         
         // Check user's IP on load
         window.onload = function() {
@@ -222,10 +222,10 @@
             
             if (env === 'production') {
                 serverUrl.textContent = 'https://safee-y8iw.onrender.com';
-                environment.textContent = 'Production (Render)';
+                environment.textContent = 'Production (Render) - Your Live Server';
             } else {
                 serverUrl.textContent = 'http://localhost:4001';
-                environment.textContent = 'Development (Local)';
+                environment.textContent = 'Development (Local) - If Running Locally';
             }
         }
 
