chore: Update dependencies and admin tools
- Updated root package.json with new dependencies
- Updated package-lock.json with resolved versions
- Enhanced admin access tool functionality

--- a/admin-access-tool.html
+++ b/admin-access-tool.html
@@ -141,13 +141,13 @@
         <div class="form-group">
             <label for="secretPathInput">🕵️ Secret Path (from server logs):</label>
             <input type="text" id="secretPathInput" placeholder="admin_xyz123abc" 
-                   value="admin_x99md0hkpa">
+                   value="admin_30dvbtu7kuv">
         </div>
 
         <div class="form-group">
             <label for="accessTokenInput">🎫 Access Token (from server logs):</label>
             <input type="text" id="accessTokenInput" placeholder="token_abc456def" 
-                   value="token_ulpie1p0ed">
+                   value="token_x0vmxzgpdkb">
         </div>
 
         <div style="text-align: center;">
